# my_calculator

./: README.md
src/: Makefile
src/calculator_oop/: CMakeLists.txt  main.cpp
src/calculator_oop/QCustomPlot-library-master/: CMakeLists.txt
src/calculator_oop/controller/: calculatorController.cpp  calculatorController.h
src/calculator_oop/forms/: calcCreditView.ui  calculatorView.ui  graph.ui
src/calculator_oop/model/: calcCreditModel.cpp  calcCreditModel.h  calculatorModel.cpp  calculatorModel.h
src/calculator_oop/qcasomplot/: qcustomplot.h
src/calculator_oop/view/: calcCreditView.cpp  calcCreditView.h  calculatorView.cpp  calculatorView.h  graph.cpp  graph.h
src/tests/: CMakeLists.txt  my_test.cpp
